# src/Digdir.Domain.Dialogporten.Infrastructure/Persistence/Configurations/Dialogs/DialogEntityConfiguration.cs
@@ -22,6 +22,7 @@ internal sealed class DialogEntityConfiguration : IEntityTypeConfiguration<Dialo
         builder.HasIndex(x => x.ServiceResource);
         builder.HasIndex(x => x.Party);
         builder.HasIndex(x => x.Process);
-        builder.HasIndex(x => new { x.Org, x.IdempotentKey }).IsUnique();
+        builder.Property(x => x.IdempotentKey).HasMaxLength(36);
+        builder.HasIndex(x => new { x.Org, x.IdempotentKey }).IsUnique().HasFilter(null);
     }
 }
